# rust-snake-wasm

./: .babelrc.js  .gitignore  Cargo.toml  LICENSE  README.MD  README.md  build.sh  game-loop.js  index.html  index.js  index_bundle.js  makefile  package.json  snake_wasm.js  styles.css  webpack.config.babel.js  webpack.config.js
docs/: 1.index.js  2.bundle.js  2.index.js  3.bundle.js  index.bundle.js  index.html  index.js  index_bundle.js  polyfills.bundle.js
js/: snake_wasm.d.ts
non_browser/piston-snake/: Cargo.toml
non_browser/piston-snake/src/: channel.rs  constants.rs  key.rs  main.rs  render.rs  render_state.rs  throttle.rs
non_browser/terminal-snake/: Cargo.toml
non_browser/terminal-snake/src/: draw.rs  key.rs  main.rs  term_env.rs
rust/: Cargo.toml  build.sh
rust/src/: game.rs  geom.rs  lib.rs  snake.rs
src/: acceleration.rs  canvas.rs  console_log.rs  constants.rs  data.rs  dead.rs  draw.rs  engine.js  game.js  game.rs  index.js  lib.rs  macros.rs  main.rs  patch.rs  render.js  render.rs  renderers.rs  world.rs
src/system/: input_buffer.rs  mod.rs  model.rs  render.rs  state.rs  traits.rs
src/world/: builder.rs  grid.rs  mod.rs  test_utils.rs  tests.rs  world.rs
