[package]
name = "snake-wasm"
version = "0.1.0"
authors = ["Yiran Sheng <shengyiran@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]

void = "1"
js-sys = "0.3.2"
wasm-bindgen = "0.2.25"
rand = "0.5.5"
arraydeque = "0.4.3"
derive_deref = "1.0"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'Node',
  'HtmlCanvasElement',
  'HtmlElement',
  'Window',
]


[profile.release]
lto = true
opt-level = 3
