[package]
name = "snake-wasm"
version = "0.1.0"
authors = ["Yiran Sheng <shengyiran@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

# cfg-if = "0.1.2"
void = "1"
js-sys = "0.3.2"
wee_alloc = "0.4.2"
wasm-bindgen = "0.2.25"
rand = "0.5.5"
arraydeque = "0.4.3"
derive_deref = "1.0"
console_error_panic_hook = "0.1"
quickcheck = "0.7.1"
morton = "0.2.0"
itertools = "0.7"
indoc = "0.2"
matches = "0.1.8"

[dependencies.web-sys]
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'Node',
  'HtmlCanvasElement',
  'HtmlElement',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.dev]

[profile.release]
lto = true

[features]
default = []
std = []
